--- a/app/package.json
+++ b/app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "blockade",
   "productName": "Blockade",
-  "version": "v0.0.1 (WIP)",
-  "release": "alpha",
+  "version": "v0.1.26",
+  "release": "indev",
   "main": "main.js"
 }
