--- a/app/package.json
+++ b/app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "blockade",
   "productName": "Blockade",
-  "version": "v0.2.0",
+  "version": "v0.1.55",
   "release": "indev",
-  "main": "source/scripts/js/main.js"
+  "main": "main.js"
 }
