--- a/app/package.json
+++ b/app/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "blockade",
 	"productName": "Blockade",
-	"version": "v0.2.41",
+	"version": "0.2.42",
 	"release": "indev",
 	"main": "source/scripts/js/main.js"
 }
