--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
 	"version": "0.4.18",
 	"main": "source/scripts/js/main.js",
 	"scripts": {
-		"start": "/Applications/Electron.app/Contents/MacOS/Electron ./"
+		"start": "electron ./"
 	}
 }
