--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
+		"docker:run": "docker run -v $PWD:/blockade --rm -it blockade",
+		"docker:build": "docker build -t blockade .",
 		"tauri": "tauri"
 	},
 	"devDependencies": {
