--- a/package.json
+++ b/package.json
@@ -14,24 +14,33 @@
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
 		"docker:run": "docker run -v $PWD:/blockade --rm -it blockade",
 		"docker:build": "docker build -t blockade .",
-		"tauri": "tauri"
+		"tauri": "tauri",
+		"test": "jest"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-static": "next",
 		"@sveltejs/kit": "next",
 		"@tauri-apps/api": "^1.0.0-rc.3",
 		"@tauri-apps/cli": "^1.0.0-rc.8",
+		"@types/jest": "^27.4.1",
 		"@typescript-eslint/eslint-plugin": "^5.10.1",
 		"@typescript-eslint/parser": "^5.10.1",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
+		"jest": "^27.5.1",
 		"prettier": "^2.5.1",
 		"prettier-plugin-svelte": "^2.5.0",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.2.6",
 		"svelte-preprocess": "^4.10.1",
+		"ts-jest": "^27.1.4",
 		"tslib": "^2.3.1",
 		"typescript": "~4.6.2"
+	},
+	"jest": {
+		"transform": {
+			"^.+\\.(ts|tsx)$": "ts-jest"
+		}
 	}
 }
