--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-static": "next",
-		"@sveltejs/kit": "next",
+		"@sveltejs/kit": "^1.0.0-next.304",
 		"@tauri-apps/api": "^1.0.0-rc.3",
 		"@tauri-apps/cli": "^1.0.0-rc.8",
 		"@types/jest": "^27.4.1",
