--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"prettier-plugin-svelte": "^2.5.0",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.2.6",
+		"svelte-css-vars": "^0.0.3",
 		"svelte-preprocess": "^4.10.1",
 		"ts-jest": "^27.1.4",
 		"tslib": "^2.3.1",
@@ -42,5 +43,8 @@
 		"transform": {
 			"^.+\\.(ts|tsx)$": "ts-jest"
 		}
+	},
+	"dependencies": {
+		"@fontsource/source-code-pro": "^4.5.6"
 	}
 }
